# QtTemplateProject

./: CMakeLists.txt
assets/: assets.qrc
src/: Window.hpp  main.cpp
src/Headers/: QtCore.hpp  QtGui.hpp  QtWidgets.hpp  pch.hpp
